# macuto

./: .coverage  .coveragerc  .gitignore  .pylintrc  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.md  COPYING  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.rst  requirements.txt  runtests.py  setup.cfg  setup.py
doc/: Makefile  conf.py  index.rst
doc/source/: macuto.classification.rst  macuto.nifti.rst  macuto.rst  modules.rst
hooks/: post-commit  pre-commit
macuto/: __init__.py  code_file_header.txt  commands.py  config.py  databuffer.py  endmember_induction.py  exceptions.py  file_manager.py  file_search.py  files.py  io.py  ipynb.py  logger.py  logger.yaml  logging.py  logging.yaml  math.py  more_collections.py  pandas.py  plot.py  render.py  scriptutils.py  setup.py  storage.py  strings.py  threshold.py  utils.py  vbm.py
macuto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
macuto/analysis/: vbm.py
macuto/atlas/: __init__.py  atlas.py  atlas_files.py  atlas_group.py  atlasquerpy
macuto/classification/: __init__.py  classification.py  classification.py~  data_io.py  distance.py  features.py  gini.py  io.py  mcnemar.py  pipeline.py  pipelines.py  plot.py  results.py  sklearn.py  sklearn_utils.py  strategy.py  threshold.py
macuto/dicom/: check_sets.py  comparison.py  itertools.py  sets.py  subj1_01.IMA  subj1_02.IMA  subj2_01.IMA  utils.py
macuto/doc/: aizkolari_classification.py  aizkolari_robust_thresholds.py  aizkolari_utils.py  classification_featset_from_niftis.py  copy_srt_times.py  do_caviar_classification.py  (+10 more)
(+57 files in other folders)
