[metadata]
name = 'macuto'
version = '0.2.0'

maintainer = 'Alexandre M. Savio'
maintainer_email = 'alexsavio@gmail.com'
description = 'MRI Analysis and Classification Tools'
license = 'BSD 3-Clause'
author = 'Alexandre M. Savio'
author_email = 'alexsavio@gmail.com'

description_files = ['README.rst', 'CHANGES.rst']

install_requires = ['numpy', 'scipy', 'scikit-learn', 'matplotlib', 
                    'nibabel', 'h5py', 'nitime']

[files]
packages = ['macuto', 'macuto.nifti',
            'macuto.classification', 'macuto.timeseries']

extra_files = ['CHANGES.rst', 'LICENSE', 'README.rst']


[global]




